--- a/jenkinsfile
+++ b/jenkinsfile
@@ -16,6 +16,7 @@ pipeline {
                 echo 'Deploying..'
                 sh '''
                 echo 'Naveen is Learning jenkins'
+                pwd
                 '''
             }
         }
